--- a/game.css
+++ b/game.css
@@ -8,3 +8,33 @@ body {
     padding: 1em;
     background-color: white;
 }
+
+#score {
+    font-size: 1.5em;
+    margin: 1.25em 0;
+}
+
+#answer {
+    font-size: 1.5em;
+    margin: 1.25em 0;
+}
+
+#value {
+    font-size: 1.25em;
+    margin: 1.25em 0;
+}
+
+#category-title{
+    font-size: 1em;
+    margin: 1.25em 0;
+}
+
+#invalid-count {
+    font-size: 1em;
+    margin: 1.25em 0;
+}
+
+#question {
+    font-size: 1.25em;
+    margin: 1.25em 0;
+}
